zero tap device copy fix, hero and arrow on mobile fix

--- a/css/white_theme.css
+++ b/css/white_theme.css
@@ -2693,11 +2693,11 @@ video.photo_min.box_style_2.medium.full-width.hero4 {
 }
 
 .homepage > .photo_min.box_style_2.disable.black-float {
-    height: 75vh !important;
+    height: 67vh !important;
 }
 
 .arrow {
-  top: 67vh !important;
+  top: 57vh !important;
 }
 
 .homepage > .photo_min.box_style_2.disable.black-float .project_text .project_snippet {
